--- a/dashed-underlines/css/base.css
+++ b/dashed-underlines/css/base.css
@@ -7,3 +7,14 @@ body {
 a:hover {
     text-decoration-style: dashed;
 }
+
+.borderlink a {
+    text-decoration: none;
+    padding-bottom: 2px;
+    border-bottom: 1px solid;
+    line-height: 22px;
+}
+
+.borderlink a:hover {
+    border-bottom: 1px dashed;
+}
