--- a/focus-states/css/base.css
+++ b/focus-states/css/base.css
@@ -97,6 +97,19 @@ a:hover {
 }
 
 
+.button-hollow {
+    color: #fff;
+    background: none;
+    padding: 10px 21px;
+    border: 2px solid #fff;
+}
+
+.button-hollow:hover {
+    background: none;
+    padding: 8px 19px;
+    border-width: 4px;
+}
+
 
 .button-color--primary {
     background: linear-gradient(90deg, #85679e, #bf4a8e);
