--- a/focus-states/css/base.css
+++ b/focus-states/css/base.css
@@ -77,7 +77,7 @@ a:hover {
     border-radius: 25px;
     cursor: pointer;
     display: block;
-    margin-top: 2em;
+    margin-top: 2em;    
 }
 
 
@@ -95,6 +95,24 @@ a:hover {
     outline: none;
     box-shadow: 0 0 0 2px #001438, 0 0 0 4px #fff;
 }
+
+
+
+.button-color--normal-v2 {
+    background: #fff;
+    color: #bf4a8e;
+    transition: background-color 0.25s;
+}
+
+.button-color--normal-v2:hover {
+    background: rgba(255, 255, 255, 0.8);
+}
+
+.button-color--normal-v2:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #001438, 0 0 0 4px #fff;
+}
+
 
 
 .button-hollow {
@@ -129,12 +147,14 @@ a:hover {
 
 
 .button-color--primary-v2 {
-    background: linear-gradient(90deg, #85679e, #bf4a8e);
+    background: #9e2e6f;
+    background-image: linear-gradient(90deg, #85679e, #bf4a8e);
     color: #fff;
+    transition: background-color 1s;
 }
 
 .button-color--primary-v2:hover {
-    background: #9e2e6f;
+    background-image: linear-gradient(90deg, transparent, transparent);
 }
 
 .button-color--primary-v2:focus {
