--- a/focus-states/css/base.css
+++ b/focus-states/css/base.css
@@ -126,6 +126,7 @@ a:hover {
     background: none;
     padding: 8px 19px;
     border-width: 4px;
+    text-decoration: none;
 }
 
 
@@ -146,6 +147,7 @@ a:hover {
 
 
 
+
 .button-color--primary-v2 {
     background: #9e2e6f;
     background-image: linear-gradient(90deg, #85679e, #bf4a8e);
@@ -163,6 +165,12 @@ a:hover {
 }
 
 
+.button-color--primary-v2.button-hollow {
+    background: none;
+    border-color: #bf4a8e;
+    color: #bf4a8e;
+}
+
 
 .arrowlink {
     margin-top: 2em;
@@ -179,6 +187,7 @@ a:hover {
 .arrowlink:hover {
     text-decoration: none;
     background-position: 100% 6px;
+    color: #9e2e6f;
 }
 
 .arrowlink:focus {
@@ -188,6 +197,11 @@ a:hover {
 
 .arrowlink-white {
     background-image: url(../img/arrow-link-white.svg);
+}
+
+.arrowlink-white:hover {
+    color: #fff;
+    opacity: 0.9;
 }
 
 .arrowlink-white:focus {
