--- a/focus-states/css/base.css
+++ b/focus-states/css/base.css
@@ -149,20 +149,37 @@ a:hover {
 
 
 .button-color--primary-v2 {
-    background: #9e2e6f;
-    background-image: linear-gradient(90deg, #85679e, #bf4a8e);
     color: #fff;
-    transition: background-color 1s;
+    position: relative;
+    overflow: hidden;
+    background-image: linear-gradient(90deg, #85679e, #bf4a8e);
+    z-index: 1;
 }
 
-.button-color--primary-v2:hover {
-    background-image: linear-gradient(90deg, transparent, transparent);
+.button-color--primary-v2:not(.button-hollow)::before {
+    display: block;
+    content: "";
+    background: #9e2e6f;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.button-color--primary-v2:hover::before {
+    opacity: 1;
 }
 
 .button-color--primary-v2:focus {
     outline: none;
     box-shadow: 0 0 0 2px #001438, 0 0 0 4px #fff;
 }
+
+
 
 
 .button-color--primary-v2.button-hollow {
