--- a/focus-states/css/base.css
+++ b/focus-states/css/base.css
@@ -179,6 +179,51 @@ a:hover {
 
 
 
+.button-color--primary-v3 {
+    color: #fff;
+    position: relative;
+    background-image: linear-gradient(90deg, #85679e, #bf4a8e);
+    z-index: 1;
+    outline: 0;
+}
+
+.button-color--primary-v3:not(.button-hollow)::before {
+    display: block;
+    content: "";
+    background: #9e2e6f;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.button-color--primary-v3::after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    bottom: -6px;
+    right: -6px;
+    border: 2px solid transparent;
+    border-radius: 50px;
+    transition: border-color 0.25s;
+}
+
+.button-color--primary-v3:hover::before {
+    opacity: 1;
+}
+
+.button-color--primary-v3:focus::after {
+    border-color: #9e2e6f;
+}
+
+
 
 .button-color--primary-v2.button-hollow {
     background: none;
